name:                mflow
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable mflow
  default-language:                 Haskell2010
  hs-source-dirs:                   src
  main-is:                          Main.hs
  ghc-options: -Wall -static
  -- other-modules:       
  -- other-extensions:    
  build-depends:
      base                          >= 4.6        && < 4.8
    , MFlow
